clean up RegistrationForm for vaadin 7